test_scores/negative_dimers/features/O00311.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/O00311.pkl.xz